--- a/DCR/sacred/templates/sacred/room.html
+++ b/DCR/sacred/templates/sacred/room.html
@@ -29,7 +29,8 @@
                 </h2>
             </header>
             <section id="modal-discription" class="mdc-dialog__body">
-                upload
+                <div id="imagelist">
+                </div>
             </section>
             <footer class="mdc-dialog__footer">
                 <button type="button" id="closemodal" class="mdc-button mdc-dialog__footer_button mdc-dialog__footer_button--cancel">&times;</button>
