--- a/DCR/sacred/templates/sacred/room.html
+++ b/DCR/sacred/templates/sacred/room.html
@@ -29,11 +29,13 @@
                 </h2>
             </header>
             <section id="modal-discription" class="mdc-dialog__body">
-                <div id="imagelist">
+                <div id="imagelist" class="image-selector mdc-radio">
+                    <div class="mdc-radio_background">
+                    </div>
                 </div>
             </section>
             <footer class="mdc-dialog__footer">
-                <button type="button" id="closemodal" class="mdc-button mdc-dialog__footer_button mdc-dialog__footer_button--cancel">&times;</button>
+                <button type="button" id="closemodal" class="mdc-button mdc-dialog__footer_button mdc-dialog__footer_button--cancel">CANCEL</button>
             </footer>
         </div>
     </div>
