--- a/DCR/sacred/static/sacred/dcr.css
+++ b/DCR/sacred/static/sacred/dcr.css
@@ -53,3 +53,40 @@
     padding: 0;
     appearance: none;
 }
+
+div.mdc-layout-grid{
+    height: 100%;
+    width: auto;
+}
+
+.chat-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.chat-container div.chat-message{
+    flex: 1 1 auto;
+    min-height: auto;
+    overflow: scroll;
+    position: absolute;
+    height: 65%;
+}
+
+.chat-container div.chat-input{
+    flex: 0 1 20%;
+    height: 20%;
+    height: 100px;
+    position: fixed;
+    bottom: 0;
+}
+
+.output-message {
+    word-wrap: break-word;
+    white-space: normal;
+    width: 100%;
+}
+
+#id_your_name {
+    width: 40px;
+}
